Adjusted the README file

--- a/tasks.json
+++ b/tasks.json
@@ -14,5 +14,13 @@
     {
         "title": "Fishing",
         "done": false
+    },
+    {
+        "title": "learn",
+        "done": false
+    },
+    {
+        "title": "build",
+        "done": false
     }
 ]
